# JOSH-Language-and-Compiler

./: .gitignore  Makefile  Makefile.am  README  annotatedMakefile  at_setup.sh  compile.sh  configure.ac  crun.sh  depend.sh  run.sh
doc/: Doxyfile  Makefile  goals.txt  index.html  traditional_compiler.uxf  traditional_system.uxf
doc/backend/: backend.uxf
doc/doxygen/: Doxyfile
include/: a.h
include/josh/ast/: ast.h
include/josh/ir/: constant.h  instruction.h  instructions.h  ir.h  type.h  type_busch.h  type_larson.h  value.h
include/josh/system/: system.h
include/josh/token/: token.h
include/josh/utils/: cmd_parse.h
include/utils/: arraylist.h  arraylistiterator.h  container.h  iterator.h  list.h  listiterator.h  map.h  vector.h
src/: Makefile.am  main.cpp
src/ir/: value.cpp
src/josh/: Makefile.am  josh.cpp  main.cpp  module.mk
src/josh/ast/: Makefile.am  ast.cpp
src/josh/ir/: Makefile.am  instruction.cpp  instructions.cpp  ir.cpp  type.cpp  value.cpp
src/josh/system/: Makefile.am  system.cpp
src/josh/tmp/: a.cpp  module.mk
src/josh/token/: Makefile.am  identifiers.cpp  identifiers.h  keywords.cpp  keywords.h  literals.cpp  literals.h  operators.cpp  operators.h  token.cpp
src/utils/: arraylist.cpp  arraylistiterator.cpp  arraylistiterator.h  cmd_parse.cpp  list.cpp  listiterator.cpp
test/: josh.test
test/progs/hello/: josh.build  (+2 more)
test/sample/: josh.test  simple1  simple2  simple2.c  simple3
tmp/iterator/: Makefile  array.cpp  array.h  arrayiterator.cpp  arrayiterator.h  iterator.h  main.cpp  test.cpp
utils/: newHeader  vimrc
(+46 files in other folders)
